# devcon

./: Cargo.toml  LICENSE  README.md  test_client.rs
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml  security.yml
agent/: Cargo.toml
agent/src/: main.rs
client/: Cargo.toml
client/proto/: message.proto
client/src/: main.rs
docs/: BROWSER_INTEGRATION.md
proto/: Cargo.toml  agent.proto  build.rs
proto/proto/: request.proto
proto/src/: lib.rs
scripts/: devcon-browser.sh
src/: command.rs  config.rs  devcontainer.rs  feature.rs  lib.rs  main.rs  server.rs  tui.rs  workspace.rs
src/driver/: agent.rs  container.rs  control_server.rs  feature_process.rs  mod.rs  runtime.rs
src/driver/runtime/: apple.rs  docker.rs
tests/: browser_integration_tests.rs  comprehensive_tests.rs  devcontainer_tests.rs  edge_cases_tests.rs  functionality_tests.rs  integration_tests.rs  main.rs  tui_tests.rs
