[workspace]
members = [".", "client", "proto"]

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MIT"

[package]
name = "devcon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A blazingly fast TUI application for managing and launching development containers"
repository = "https://github.com/kreemer/devcon"
homepage = "https://github.com/kreemer/devcon"
documentation = "https://github.com/kreemer/devcon"
readme = "README.md"
keywords = ["devcontainer", "tui", "development", "container", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["DevCon Contributors"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
config = { version = "0.15.13", features = ["yaml"] }
crossterm = "0.29.0"
indicatif = "0.18.0"
libc = "0.2"
ratatui = "0.29.0"
ratatui-widgets = "0.2.2"
serde = "1.0.219"
serde_yaml = "0.9.34"
xdg = "3.0.0"
minijinja = "2.11.0"
pidfile2 = "0.1.1"
devcon-proto = { path = "proto" }
serde_json = "1.0.48"

[dependencies.protobuf]
package = "protobuf"
version = "4.33.2-release"

[dev-dependencies]
tempfile = "3.8"

