[workspace]
members = ["."]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"

[package]
name = "devcon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A blazingly fast TUI application for managing and launching development containers"
repository = "https://github.com/kreemer/devcon"
homepage = "https://github.com/kreemer/devcon"
documentation = "https://github.com/kreemer/devcon"
readme = "README.md"
keywords = ["devcontainer", "tui", "development", "container", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["DevCon Contributors"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tempfile = "3.8"
oci-spec = "0.8.4"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
flate2 = { version = "1.1.5", features = ["zlib", "zlib-rs"] }
tar = "0.4.44"

