[workspace]
members = [".", "agent", "proto"]

[workspace.package]
version = "0.2.4"
edition = "2024"
license = "MIT"

[package]
name = "devcon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A blazingly fast TUI application for managing and launching development containers"
repository = "https://github.com/kreemer/devcon"
homepage = "https://github.com/kreemer/devcon"
documentation = "https://github.com/kreemer/devcon"
readme = "README.md"
keywords = ["devcontainer", "tui", "development", "container", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["DevCon Contributors"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9"
tempfile = "3.8"
oci-spec = "0.8.4"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
flate2 = { version = "1.1.5", features = ["zlib", "zlib-rs"] }
tar = "0.4.44"
dirs = "5.0"
minijinja = "2.6.0"
indicatif = "0.18.3"
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = "0.3.22"
fs_extra = "1.3.0"
devcon-proto = { path = "proto" }
prost = "0.13"
bytes = "1.9"
console = "0.16.2"
open = "5.3"

[dev-dependencies]
assert_cmd = "2.1.1"

