[package]
name = "devcon-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
devcon-proto = { path = "../proto" }
prost = "0.14.3"
bytes = "1.11.1"
clap = { version = "4.5.57", features = ["derive", "env"] }

[[bin]]
name = "devcon-agent"
path = "src/main.rs"
