[package]
name = "devcon-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]



[build-dependencies.protobuf-codegen]
package = "protobuf-codegen"
version = "4.33.2-release"

[build-dependencies.protobuf_well_known_types]
package = "protobuf-well-known-types"
version = "4.33.2-release"

[dependencies.protobuf]
package = "protobuf"
version = "4.33.2-release"

[dependencies.protobuf_well_known_types]
package = "protobuf-well-known-types"
version = "4.33.2-release"
